--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   </form>
 </div>
 
+
+<form action="inscription.php" method="POST">
 <div class="col">
   <h1>Inscription</h1>
   <div class="form-check">
@@ -45,7 +47,6 @@
     <label class="form-check-label" for="exampleRadios2">
       Femme
     </label>
-  <form>
     <div class="form-group">
         <label for="exampleInputEmail1"></label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nom">
@@ -66,8 +67,8 @@
       <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
     </div>
     <button type="submit" class="btn btn-primary">INSCRIPTION</button>
-</form>
 </div>
+</form>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
